solve the css problem

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kaushan+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body class="inter">
     <header>
@@ -52,11 +52,11 @@
             <div class="user-content">
                 <div class="designer">
                     <div class="image">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
                     </div>
                     <div class="user-article">
                         <h3>Loved by Designers</h3>
@@ -142,7 +142,7 @@
                     <input type="Name" placeholder="name" name="" id="">
                     <br>
                     <h4>Message</h4>
-                    <input type="Message" placeholder="write your message...." name="" id="">
+                    <textarea name="" id="" cols="30" rows="5"></textarea>
                 </form>
                 <button class="btn-primary">Get in Touch</button>
             </div>       
