image problem solved

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Explore the live preview and imagine your <br>brand in this bold new look.</p>
             <button class="btn-primary">Lunch Live Preview</button>
             </div>
-           <img class="image" src="images/wc-mini.png" alt="">
+           <img class="image" src="./images/wc-mini.png" alt="">
             </div>
             <div class="section-title">
                 <h1>Joined Thousand of Productive Users</h1>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="info">
                         <div class="user-image">
-                            <img src="images/avatar.png" alt="">
+                            <img src="./images/avatar.png" alt="">
                         </div>
                         <div class="user-information">
                             <p>Reviewer Name</p>
@@ -74,11 +74,11 @@
                 </div>
                  <div class="designer">
                     <div class="image">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
                     </div>
                     <div class="user-article">
                         <h3>Loved by Designers</h3>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="info">
                         <div class="user-image">
-                            <img src="images/avatar.png" alt="">
+                            <img src="./images/avatar.png" alt="">
                         </div>
                         <div class="user-information">
                             <p>Reviewer Name</p>
@@ -96,11 +96,11 @@
                 </div>
                  <div class="designer">
                     <div class="image">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
-                    <img src="images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
+                    <img src="./images/icon-star.png" alt="">
                     </div>
                     <div class="user-article">
                         <h3>Loved by Designers</h3>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="info">
                         <div class="user-image">
-                            <img src="images/avatar.png" alt="">
+                            <img src="./images/avatar.png" alt="">
                         </div>
                         <div class="user-information">
                             <p>Reviewer Name</p>
@@ -126,7 +126,7 @@
                 <button class="btn-primary">Get Started Free</button>
             </div>
             <div>
-                <img class="image" src="images/wc-big.png" alt="">
+                <img class="image" src="./images/wc-big.png" alt="">
              </div>
         </section>
         <section class="information">
